TASK: Add testing to travis
Travis is now not only used to check syntax errors, but also executes first tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
 script:
   - pwd
   - python -m compileall ./
+  - python -m unittest discover -s . -v -p "*_test.py"
 
 #  pychecker doesn't work as expected for me. Until now i'm going with just syntax checking all the files.
 #  - pychecker ./*.py
