--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "3.6"
 # command to install dependencies
 install:
-  - pip install python-telegram-bot --upgrade
+  - pip install -r requirements.txt
 
 # command to run tests
 script:
