--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install python-coveralls
 
 # command to run tests
 script:
-  - pwd
   - python -m compileall ./
   - python -m unittest discover -s . -v -p "*_test.py"
 
-#  pychecker doesn't work as expected for me. Until now i'm going with just syntax checking all the files.
-#  - pychecker ./*.py
+after_success:
+  - coveralls
 
 notifications:
   email: false
