FIX: Only one line allowed as deployment script

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,12 @@ before_deploy:
 - docker login --username "${DOCKER_HUB_USERNAME}" --password "${DOCKER_HUB_PASSWORD}"
 deploy:
   - provider: script
-    script: 
-    - curl https://rico-j.de/travis/deploy-gh.sh
-    - docker tag geizhalsbot:latest $DOCKER_HUB_USERNAME/geizhalsbot:$TRAVIS_TAG
-    - docker push $DOCKER_HUB_USERNAME/geizhalsbot:latest
-    - docker tag geizhalsbot:latest $DOCKER_HUB_USERNAME/geizhalsbot:latest
-    - docker push $DOCKER_HUB_USERNAME/geizhalsbot:$TRAVIS_TAG
+    script: >
+           curl https://rico-j.de/travis/deploy-gh.sh &&
+           docker tag geizhalsbot:latest "${DOCKER_HUB_USERNAME}"/geizhalsbot:$TRAVIS_TAG &&
+           docker push "${DOCKER_HUB_USERNAME}"/geizhalsbot:latest &&
+           docker tag geizhalsbot:latest "${DOCKER_HUB_USERNAME}"/geizhalsbot:latest &&
+           docker push "${DOCKER_HUB_USERNAME}"/geizhalsbot:$TRAVIS_TAG
     skip_cleanup: true
     on:
       branch: master
