FIX: Multiline commands get 'n' appended to the end
https://github.com/travis-ci/travis-ci/issues/9281

Happened here: https://travis-ci.org/d-Rickyy-b/Python-GeizhalsBot/jobs/461410421

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_deploy:
 - docker login --username "${DOCKER_HUB_USERNAME}" --password "${DOCKER_HUB_PASSWORD}"
 deploy:
   - provider: script
-    script: >
+    script: >-
            curl https://rico-j.de/travis/deploy-gh.sh &&
            docker tag geizhalsbot "${DOCKER_HUB_USERNAME}"/geizhalsbot:latest &&
            docker push "${DOCKER_HUB_USERNAME}"/geizhalsbot:latest
@@ -36,7 +36,7 @@ deploy:
       python: "3.6"
 
   - provider: script
-    script: >
+    script: >-
            docker tag geizhalsbot "${DOCKER_HUB_USERNAME}"/geizhalsbot:$TRAVIS_TAG &&
            docker push "${DOCKER_HUB_USERNAME}"/geizhalsbot:$TRAVIS_TAG
     skip_cleanup: true
@@ -46,7 +46,7 @@ deploy:
       python: "3.6"
 
   - provider: script
-    script: >
+    script: >-
             docker tag geizhalsbot "${DOCKER_HUB_USERNAME}"/geizhalsbot:dev && 
             docker push "${DOCKER_HUB_USERNAME}"/geizhalsbot:dev
     skip_cleanup: true
