--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 
 install:
 - pip install -r requirements.txt
-- pip install python-coveralls
+- pip install coveralls
 script:
 - python -m compileall ./
 - coverage run -m unittest discover -s . -v -p "*_test.py"
