--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,6 +8,10 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  CI: true
+  COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   build:
 
@@ -34,6 +38,11 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Run unit tests and coverage report
       run: |
         coverage run --omit='*/virtualenv/*,*/site-packages/*' -m unittest discover -s . -v -p "*_test.py"
+    - name: Upload Coveralls report
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        coveralls
