chores: use python:3-slim container

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -46,6 +46,7 @@ jobs:
     name: Finish Coveralls
     needs: build
     runs-on: ubuntu-latest
+    container: python:3-slim
     steps:
     - name: Finished
       run: |
