--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   geizhalsbot:
     container_name: ghbot
     restart: always
+    image: 0rickyy0/geizhalsbot
     volumes:
       - /path/to/logs/:/geizhalsbot/logs
       - /path/to/config.py:/geizhalsbot/config.py
